adds revised crystal game

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <span id="message"></span>
     <div id="scorecard"></div>
     <div id="div-of-crystals"></div>
-    <div id="reset">Reset</div>
+    <div id="reset">RESET</div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="assets/javascript/game.js" async defer></script>
